<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIPA WIFI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_username">Username :</string>
    <string name="txt_password">Password :</string>
    <string name="btnTxt_login">Login</string>
    <string name="header_txt_sipa">SIPA WiFi Auto Login</string>
    <string name="txt_hint_user">Username</string>
    <string name="txt_hint_pass">Password</string>
    <string name="helpTxt">Help</string>
    <string name="aboutTxt">About</string>
    <string name="actionFlow">Action Flow</string>

</resources>
